--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
             </div>
 
             <div class="tab text-align-center">
-                <button onclick="food('food')">Eat</button>
-                <button onclick="food('food02')">Drink</button>    
+                <button onclick="firstButton(), food('food')" id="first-tab">Eat</button>
+                <button onclick="secondButton(), food('food02')" id="second-tab">Drink</button>    
             </div>
 
             <div id="food" class="tablink">
@@ -202,6 +202,8 @@
                 <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank">w3.css</a>
             </p>
     </footer>
+    
+    <script src="_js/script.js"></script>
 
     <script>
         function food(food) {
@@ -211,9 +213,8 @@
             x[i].style.display = "none";
         }
         document.getElementById(food).style.display = "block";
-        
+
         }
     </script>
-
 </body>
 </html>
